--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,3 @@
-
 /* Add application styles & imports to this file! */
 
 body {
@@ -7,13 +6,22 @@ body {
   margin: 0;
 }
 
-my-app {
-  display: block;
+*,
+*::before,
+*::after {
   box-sizing: border-box;
-  padding: 30px;
 }
 
-my-app > .k-icon.k-i-loading {
+app-root {
+  display: flex;
+  padding: 2em;
+  width: 100vw;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 2em;
+}
+
+app-root > .k-icon.k-i-loading {
   font-size: 64px;
   position: absolute;
   top: 50%;
@@ -22,8 +30,12 @@ my-app > .k-icon.k-i-loading {
 }
 
 .example-wrapper {
-  min-height: 280px;
-  align-content: flex-start;
+  width: 40%;
+  min-width: 400px;
+  box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.2);
+  padding: 8em;
+  border-radius: 1em;
+  flex: 1;
 }
 
 .example-wrapper p,
@@ -69,4 +81,16 @@ my-app > .k-icon.k-i-loading {
 
 .event-log li:last-child {
   margin-bottom: -1px;
+}
+.row {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  width: fit-content;
+  min-width: fit-content;
+  padding: 2em;
+  border-radius: 1em;
+  box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.2);
+  background-color: black;
+  flex: 1;
 }
